# mono_observer

./: .gitignore  LICENSE  README.md
mono_observer_bringup/: CMakeLists.txt  package.xml
mono_observer_bringup/Inverse_Kinematics_doc/: IK_Calc.ipynb
mono_observer_bringup/launch/: gazebo_test_trayectory_controller.launch.py  mujoco_test_trayectory_controller.launch.py  test_trayectory_controller.launch.py
mono_observer_bringup/mono_observer_bringup/src/: AddMarker.py  IKTest.py  TestAllAngles.py  TestIKInputPosition.py  TestIKPosition.py  TestInputAngle.py  TestPosition.py  Test_multi_tray.py  ToUnity.py  inverse_kinematics.py
mono_observer_bringup/rviz/: mono_observer_rviz.rviz
mono_observer_description/: CMakeLists.txt  package.xml
mono_observer_description/config/: trajectory_controller.yaml
mono_observer_description/launch/: mono_observer_display.launch.xml
mono_observer_description/meshes/: Antebrazo.stl  Base.stl  Camara.stl
mono_observer_description/mujoco_models/: Guia.md  URDF2MJCF.py  full_xacro.urdf  full_xacro.xml
mono_observer_description/rviz/: scara_rviz.rviz
mono_observer_description/urdf/: camera_sensor.xacro  mono_observer_controller.xacro  mono_observer_controller_gz.xacro  mono_observer_urdf.xacro  mujoco_config.xacro  trajectory_controller.xacro  trajectory_controller_gz.xacro  xacro_properties.xacro
mono_observer_driver/: package.xml  requirements.txt  setup.cfg  setup.py
mono_observer_driver/mono_observer_driver/: serial_comunication.py  topic_test.py  (+1 more)
mono_observer_driver_interface/: CMakeLists.txt  package.xml
(+10 files in other folders)
